--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ html, body{
   font-family: 'Poppins', sans-serif;
   color:#222;
 }
-.navbar{
+/* .navbar{
   padding: .9rem;
-}
+} */
 .navbar-brand img{
   width: 150px;
   height: 70px;
